--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "Final-Project",
+  "name": "public",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
-    "mongodb": "^3.3.4"
+    "mongodb": "^3.3.4",
+    "morgan": "^1.9.1",
+    "npm": "^6.13.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
