--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.3.4",
+    "mongoose": "^5.8.0",
     "morgan": "^1.9.1",
     "npm": "^6.13.1"
   },
